--- a/index.html
+++ b/index.html
@@ -33,351 +33,100 @@
 	</div>
 	<!--============== PRELOADER END ==============-->
 
-	<!-- ================= HEADER ================= -->
-	<!-- <header class="header">
-		<a href="#" class="nav-btn">
-			<span></span>
-			<span></span>
-			<span></span>
-		</a>
-		<div class="top-panel">
-			<div class="container">
-				<div class="header-left">
-					<ul class="header-cont">
-						<li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:18004886040">1-800-488-6040</a></li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Mon - Fri: 8:00AM - 7:00PM | Sat - Sun: Closed</li>
-					</ul>
-				</div>
-				<div class="header-right">
-					<form class="search-form">
-						<input type="search" class="search-form__field" placeholder="Search" value="" name="s">
-						<button type="submit" class="search-form__submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-					</form>
-					<ul class="social-list">
-						<li><a target="_blank" href="https://www.facebook.com/rovadex"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a target="_blank" href="https://twitter.com/RovadexStudio"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a target="_blank" href="https://www.youtube.com"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-						<li><a target="_blank" href="https://www.instagram.com/rovadex"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="header-menu">
-			<div class="container">
-				<div class="header-logo">
-					<a href="index.html" class="logo"><img src="assets/img/logo.svg" alt="logo"></a>
-				</div>
-				<nav class="nav-menu">
-					<ul class="nav-list">
-						<li class="dropdown">
-							<a href="#">Home <i class="fa fa-caret-down"></i></a>
-							<ul>
-								<li class="menu-active"><a href="index.html">Crossfit</a></li>
-								<li><a href="home-fitness.html">Fitness</a></li>
-								<li><a href="home-crossfit-lite.html">Crossfit Lite</a></li>
-							</ul>
-						</li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="services.html">Services</a></li>
-						<li class="dropdown">
-							<a href="#">Pages <i class="fa fa-caret-down"></i></a>
-							<ul>
-								<li><a href="program.html">Program</a></li>
-								<li><a href="trainer.html">Trainer</a></li>
-							</ul>
-						</li>
-						<li><a href="blog.html">News</a></li>
-						<li><a href="contacts.html">Contacts</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header> -->
-	<!-- =============== HEADER END =============== -->
-
-	<!-- ============ S-CROSSFIT-SLIDER ============ -->
-	<!-- <section class="s-crossfit-slider crossfit-slider-lite">
-		<div class="crossfit-slider">
-			<div class="crossfit-slide">
-				<div class="crossfit-slide-bg" style="background-image: url(assets/img/bg/bg5.jpg);"></div>
-				<div class="container">
-					<div class="crossfit-slide-cover">
-						<h2 class="title">The <span>Title</span></h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum neque leo, mollis sed ultricies efficitur, auctor vel dolor. </p>
-					</div>
-				</div>
-			</div>
-			<div class="crossfit-slide">
-				<div class="crossfit-slide-bg" style="background-image: url(assets/img/slide-2.jpg);"></div>
-				<div class="container">
-					<div class="crossfit-slide-cover">
-						<h2 class="title">The <span>Title</span></h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum neque leo, mollis sed ultricies efficitur, auctor vel dolor. </p>
-					</div>
-				</div>
-			</div>
-			<div class="crossfit-slide">
-				<div class="crossfit-slide-bg" style="background-image: url(assets/img/slide-3.jpg);"></div>
-				<div class="container">
-					<div class="crossfit-slide-cover">
-						<h2 class="title">The <span>Title</span></h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum neque leo, mollis sed ultricies efficitur, auctor vel dolor. </p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="slider-navigation"></div>
-	</section> -->
-	<!-- ========== S-CROSSFIT-SLIDER END ========== -->
-
-
-	<!-- ============== S-CLUB-CARDS ============== -->
-	<section class="s-club-cards">
-		<div class="container">
-			<h2 class="title-decor">The <span>Plans</span></h2>
-			<p class="slogan">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet,
-				consectetur adipiscing elit.</p>
-			<div class="row">
-				<div class="col-md-4 club-card-col">
-					<div class="club-card-item">
-						<div class="price-cover">
-							<div class="price">40</div>
-							<div class="date"><span>99</span>3 months</div>
-						</div>
-						<ul class="list">
-							<li>Maecenas consequat</li>
-							<li>ex id lobortis venenatis</li>
-							<li>Mauris id erat enim</li>
-							<li class="item-excluded">Morbi dolor dolortin</li>
-							<li class="item-excluded">lorem ut, venenatis dapibus mi</li>
-						</ul>
-						<a href="program.html" class="btn">Subscribe</a>
-					</div>
-				</div>
-				<div class="col-md-4 club-card-col">
-					<div class="club-card-item">
-						<div class="price-cover">
-							<div class="price">70</div>
-							<div class="date"><span>99</span>6 months</div>
-						</div>
-						<ul class="list">
-							<li>Maecenas consequat</li>
-							<li>ex id lobortis venenatis</li>
-							<li>Mauris id erat enim</li>
-							<li>Morbi dolor dolortin</li>
-							<li class="item-excluded">lorem ut, venenatis dapibus mi</li>
-						</ul>
-						<a href="program.html" class="btn">Subscribe</a>
-					</div>
-				</div>
-				<div class="col-md-4 club-card-col">
-					<div class="club-card-item">
-						<div class="price-cover">
-							<div class="price">120</div>
-							<div class="date"><span>99</span>1 year</div>
-						</div>
-						<ul class="list">
-							<li>Maecenas consequat</li>
-							<li>ex id lobortis venenatis</li>
-							<li>Mauris id erat enim</li>
-							<li>Morbi dolor dolortin</li>
-							<li>lorem ut, venenatis dapibus mi</li>
-						</ul>
-						<a href="program.html" class="btn">Subscribe</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- ============ S-CLUB-CARDS END ============ -->
-
-	<!-- ============== S-ABOUT-PROGRAM ============== -->
-	<section class="s-about">
-		<div class="container">
-			<!-- <img class="about-effect-tringle" src="assets/img/tringle-about-top.svg" alt="img"> -->
-			<div class="row about-row">
-				<div class="col-md-5 about-img-col">
-					<div class="about-img-cover">
-						<div class="about-img-1">
-							<img class="about-img-effect-1" src="assets/img/square-yellow.svg" alt="img">
-							<img class="about-img-effect-2" src="assets/img/group-circle-2.svg" alt="img">
-							<img src="assets/img/bg1.jpg" alt="img">
-						</div>
-						<div class="about-img-2">
-							<img src="assets/img/about-top-3.jpg" alt="img">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-7 about-info-cover">
-					<h2 class="title-decor">Notes and Conditions for <span>Subscription</span></h2>
-					<div class="text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmmpor incididunt ut
-							labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Lorem ipsum dolor sit
-							amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna aliqua. Ut <a href="contacts.html">enim ad minim</a> veniam, quis
-							nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-							irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<!-- <ul class="about-cont">
-							<li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:18004886040">1-0000-000-0000</a></li>
-							<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
-						</ul>
-						<ul class="social-list">
-							<li><a target="_blank" href="https://www.facebook.com/rovadex"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a target="_blank" href="https://twitter.com/RovadexStudio"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a target="_blank" href="https://www.youtube.com"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-							<li><a target="_blank" href="https://www.instagram.com/rovadex"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-						</ul> -->
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- ============ S-ABOUT-PROGRAM END ============ -->
-
-	<!-- ============ S-CROSSFIT-BANNER ============ -->
-	<section class="s-crossfit-banner">
-		<!-- <div class="crossfit-banner-left" style="background-image: url(assets/img/crossmax-2.jpg);"></div> -->
-		<div class="crossfit-banner-center">
-			<!-- <div class="text-top">Discount for students</div>
-			<h2>crossmax</h2> -->
-			<div class="text-bottom">Discount for <a href="">students</a></div>
-		</div>
-	</section>
-	<!-- ========== S-CROSSFIT-BANNER END ========== -->
-
-
 	<!-- ================ S-CONTACTS ================ -->
-	<section class="s-contacts" >
-		<div class="container">
-			<h2 class="title-decor">The <span>Form</span></h2>
-			<p class="slogan">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at condimentum neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at condimentum neque. </p>
+	<section class="s-contacts">
+		<div class="row justify-content-center">
+			<div class="col-md-8 col-12">
+				<div class="form-card">
+					<h2 class="title-decor">اشترك <span>الآن</span></h2>
+					<p class="slogan">في البداية كونك قررت انك تبي تتغير وتحسن من شكل جسمك وصحتك ودخلت للتسجيل، فهٰذه
+						خطوة كبيرة إلى الأمام وأهنيك عليها
 
-			<form id='contactform' action="assets/php/contact.php" name="contactform">
-				<div class="row justify-content-center">
+						في هذا الفورم راح تشوف التفاصيل الخاصة في الإشتراك بالكامل
 
-					<div class="col-md-6 col-12 ">
+						أحب أشكرك على ثقتك فيني، لأن راح أوصلك لهدفك، وبتشوف النتائج التي تسرّك وبإذن الله بكون قد هذه
+						الثقه
+					</p>
 
-						<ul class="form-cover">
-							<li class="inp-name">
-								<label>Field1 * (required)</label>
-								<input id="name" type="text" name="your-name">
-							</li>
-							<li class="inp-email">
-								<label>Field2 * (required)</label>
-								<input id="email" type="email" name="your-email">
-							</li>
-							<li class="inp-text">
-								<label>Field3 * (required)</label>
-								<textarea id="comments" name="your-text"></textarea>
-							</li>
-						</ul>
-						
-					</div>
-					<div class="col-md-6 col-12 ">
-
-						<ul class="form-cover">
-							<li class="inp-name">
-								<label>Field4 * (required)</label>
-								<input id="name" type="text" name="your-name">
-							</li>
-							<li class="inp-email">
-								<label>Field5 * (required)</label>
-								<input id="email" type="email" name="your-email">
-							</li>
-							<li class="inp-text">
-								<label>Field6 * (required)</label>
-								<textarea id="comments" name="your-text"></textarea>
-							</li>
-						</ul>
-						
-					</div>
-					<div class="checkbox-wrap">
-						<div class="checkbox-cover">
-							<input type="checkbox">
-							<p>I have read all terms and conditions and undertake to abide by them.</p>
+					<div class="row btn-card">
+						<div class="col-md-6 col-12">
+							<div class="btn-form-card">
+								<button id="#submit" type="submit" class="btn">نتائج المشتركين
+								</button>
+							</div>
+						</div>
+						<div class="col-md-6 col-12">
+							<div class="btn-form-card">
+								<button id="#submit" type="submit" class="btn">الشروط والاحكام </button>
+							</div>
 						</div>
 					</div>
-					<div class="col-md-12 col-12 ">
-						<div class="btn-form-cover">
-							<button id="#submit" type="submit" class="btn">Send </button>
+
+					<form id='contactform' action="assets/php/contact.php" name="contactform">
+						<div class="row justify-content-center">
+
+							<div class="col-md-6 col-12 ">
+
+								<ul class="form-cover">
+									<li class="inp-name">
+										<label> الإسم الثلاثي</label>
+										<input id="name" type="text" name="your-name">
+									</li>
+									<li class="inp-email">
+										<label>الوزن</label>
+										<input id="email" type="email" name="your-email">
+									</li>
+									<li class="inp-text">
+										<label>١٧ـ هل توجد أي اصابات؟ اذكرها
+										</label>
+										<textarea id="comments" name="your-text"></textarea>
+									</li>
+								</ul>
+
+							</div>
+							<div class="col-md-6 col-12 ">
+								<ul class="form-cover">
+									<li class="inp-name">
+										<label> الإسم الثلاثي</label>
+										<input id="name" type="text" name="your-name">
+									</li>
+									<li class="inp-email">
+										<label>الوزن</label>
+										<input id="email" type="email" name="your-email">
+									</li>
+									<li class="inp-text">
+										<label>١٧ـ هل توجد أي اصابات؟ اذكرها
+										</label>
+										<textarea id="comments" name="your-text"></textarea>
+									</li>
+								</ul>
+
+							</div>
+							<div class="checkbox-wrap">
+								<div class="checkbox-cover">
+									<input type="checkbox">
+									<p>لقد قرأت جميع الشروط والأحكام وأتعهد بالالتزام بها.
+									</p>
+								</div>
+							</div>
+							<div class="col-md-12 col-12 ">
+								<div class="btn-form-cover">
+									<button id="#submit" type="submit" class="btn">ارسال </button>
+								</div>
+							</div>
 						</div>
-					</div>
+
+					</form>
+					<div id="message"></div>
 				</div>
 
-			</form>
-			<div id="message"></div>
+			</div>
 		</div>
+
 	</section>
 	<!-- ============== S-CONTACTS-END ============== -->
 
 
-
-	<!-- ================== FOOTER ================== -->
-	<!-- <footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 col-lg-3 footer-item-logo">
-					<a href="index.html" class="logo-footer"><img src="assets/img/footer-logo2.svg" alt="logo"></a>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-					<ul class="social-list">
-						<li><a target="_blank" href="https://www.facebook.com/rovadex"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a target="_blank" href="https://twitter.com/RovadexStudio"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a target="_blank" href="https://www.youtube.com"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-						<li><a target="_blank" href="https://www.instagram.com/rovadex"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-					</ul>
-				</div>
-				<div class="col-sm-6 col-lg-3 footer-item footer-item-list">
-					<h3>Links</h3>
-					<ul class="footer-link">
-						<li><a href="#">Sed ut perspiciatis unde</a></li>
-						<li><a href="#">Omnis iste natus error sit</a></li>
-						<li><a href="#">Voluptatem accusantium</a></li>
-						<li><a href="#">Doloremque laudantium</a></li>
-					</ul>
-				</div>
-				<div class="col-sm-6 col-lg-3 footer-item">
-					<h3>Contact us</h3>
-					<ul class="footer-cont">
-						<li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:18004886040">1-800-488-6040</a></li>
-						<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:crossFit@gmail.com">CrossFit@gmail.com</a></li>
-						<li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="contacts.html">London,Street 225r.21</a></li>
-					</ul>
-				</div>
-				<div class="col-sm-6 col-lg-3 footer-item">
-					<h3>Blog</h3>
-					<ul class="footer-blog">
-						<li>
-							<a href="blog.html" class="img-cover"><img src="assets/img/footer-icon-1.jpg" alt="img"></a>
-							<div class="footer-blog-info">
-								<div class="name"><a href="blog.html">Sed ut perspiciatis</a></div>
-								<p>Omnis iste natus error sit voluptatem…</p>
-							</div>
-						</li>
-						<li>
-							<a href="blog.html" class="img-cover"><img src="assets/img/footer-icon-2.jpg" alt="img"></a>
-							<div class="footer-blog-info">
-								<div class="name"><a href="blog.html">Sed ut perspiciatis</a></div>
-								<p>Omnis iste natus error sit voluptatem…</p>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="footer-bottom">
-				<div class="copyright"><a href="#" target="_blank">Rovadex</a> © 2019. Fitmax. All Rights Reserved.</div>
-				<ul class="footer-menu">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="blog.html">News</a></li>
-					<li><a href="contacts.html">Contacts</a></li>
-				</ul>
-			</div>
-		</div>
-	</footer> -->
-	<!-- ================ FOOTER END ================ -->
 
 	<!--=================== TO TOP ===================-->
 	<a class="to-top" href="#home">
